# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,12 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import contactsRouter from "./contacts";
+import campaignsRouter from "./campaigns";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(contactsRouter);
+router.use(campaignsRouter);
 
 export default router;
